--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,26 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.font-dm {
+  font-family: var(--font-DM-Serif-Display) sans-serif !important;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.font-manrope {
+  font-family: var(--font-Manrope) sans-serif !important;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.index__bg{
+  background-color: #F9F9F8;
 }
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.index__btn_colors{
+  background: #CBA655;
+  color: #222222;
+  font-weight: 600;
+  font-size: 16px;
+  font-family: var(--font-Manrope);
+  cursor: pointer !important;
+  transition: background 0.3s !important;
+}
+.index__btn_colors:hover{
+  background: #222222;
+  color: #F9F9F8;
 }
