--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,54 @@
 @import "tailwindcss";
 
+/* Custom container */
+@layer utilities {
+  .container {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  @media (min-width: 640px) {
+    .container {
+      max-width: 640px;
+      padding-left: 2rem;
+      padding-right: 2rem;
+    }
+  }
+
+  @media (min-width: 768px) {
+    .container {
+      max-width: 768px;
+    }
+  }
+
+  @media (min-width: 1024px) {
+    .container {
+      max-width: 1024px;
+      padding-left: 4rem;
+      padding-right: 4rem;
+    }
+  }
+
+  @media (min-width: 1280px) {
+    .container {
+      max-width: 1280px;
+      padding-left: 5rem;
+      padding-right: 5rem;
+    }
+  }
+
+  @media (min-width: 1536px) {
+    .container {
+      max-width: 1536px;
+      padding-left: 6rem;
+      padding-right: 6rem;
+    }
+  }
+}
+
 .font-dm {
   font-family: var(--font-DM-Serif-Display) sans-serif !important;
 }
@@ -11,6 +60,7 @@
 .index__bg{
   background-color: #F9F9F8;
 }
+
 .index__btn_colors{
   background: #CBA655;
   color: #222222;
@@ -20,6 +70,7 @@
   cursor: pointer !important;
   transition: background 0.3s !important;
 }
+
 .index__btn_colors:hover{
   background: #222222;
   color: #F9F9F8;
