--- a/app/globals.css
+++ b/app/globals.css
@@ -63,7 +63,7 @@
 }
 
 .index__btn_colors{
-  background: #CBA655;
+  background: #42C0DF;
   color: #222222;
   font-weight: 600;
   font-size: 16px;
