--- a/app/globals.css
+++ b/app/globals.css
@@ -51,7 +51,7 @@
 
 /* ✅ To'g'ri font class-lari */
 .font-dm {
-  font-family: var(--font-DM-Serif-Display);
+  font-family: var(--font-playfair-pisplay);
 }
 
 .font-manrope {
@@ -63,8 +63,8 @@
 }
 
 .index__btn_colors{
-  background: #42C0DF;
-  color: #222222;
+  background: #932c4d;
+  color: #fff;
   font-weight: 600;
   font-size: 16px;
   font-family: var(--font-Manrope);
